--- a/personal/CMakeLists.txt
+++ b/personal/CMakeLists.txt
@@ -5,4 +5,6 @@ project(clox)
 file(GLOB SOURCES "*.c" "*.h")
 
 add_executable(clox ${SOURCES}
-        vm.c)
+        vm.c
+        compiler.h
+        compiler.c)
